--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ dependencies {
 	modImplementation "net.modificationstation:StationAPI:${project.stapi_version}"
 
 	// Optional, but convenient mods for mod creators and users alike.
-	modImplementation("com.github.calmilamsy:ModMenu:${project.modmenu_version}") {
+	modImplementation("net.glasslauncher.mods:ModMenu:${project.modmenu_version}") {
 		transitive false
 	}
 	modImplementation("net.glasslauncher.mods:GlassConfigAPI:${project.gcapi_version}") {
